--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image: ^4.0.17
+  image: ^4.1.6
   meta: ^1.9.1
   path_provider: ^2.0.15
-  image_picker: ^0.8.7+5
+  image_picker: ^1.0.7
   path: ^1.8.3
 
 dev_dependencies:
